Milestone/0.99.0 (#165)
* Issue #162 bump versions & begin supporting registry v2 API

* Issue #162 revert version change for grails

* Issue #162 bump jdk version

* Issue #162 improve v2 support; ensure pingable; refactory for reg->url->string based on actions

* Issue #162 bump grails wrapper

* Issue #162 fix broken Dockerfile :D

* Issue #162 add gradle wrapper

* Issue #162 remove gradle. Travis playing up

* Issue #162 add wrapper jar

* Issue #162 add wrapper jar

* Issue #162 add wrapper jar